Added jQuery dependency

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
     </p>
   </div>
 
+  <script src="vendor/jquery.js"></script>
+
   <script src="js/bind_polyfill.js"></script>
   <script src="js/classlist_polyfill.js"></script>
   <script src="js/animframe_polyfill.js"></script>
